[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/actors/vehicles/cars/Car.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/SUV41.gd" type="Script" id=2]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_side_01.png" type="Texture" id=3]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_side_02.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_side_03.png" type="Texture" id=5]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_side_04.png" type="Texture" id=6]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_up_01.png" type="Texture" id=7]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_up_02.png" type="Texture" id=8]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_up_03.png" type="Texture" id=9]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_up_04.png" type="Texture" id=10]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_down_01.png" type="Texture" id=11]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_down_02.png" type="Texture" id=12]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_down_03.png" type="Texture" id=13]
[ext_resource path="res://scenes/actors/vehicles/cars/suv41/images/car_run_down_04.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "run_side",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "run_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "run_down",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "run"
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Base:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 5 )

[node name="SUV41" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Base" parent="." index="0"]
frames = SubResource( 1 )
animation = "run_up"

[node name="Anim" parent="." index="2"]
anims/run = SubResource( 2 )

[node name="EnterArea" parent="." index="3"]
editor/display_folded = true
position = Vector2( -16, 0 )

[node name="Collision" parent="EnterArea" index="0"]
shape = SubResource( 3 )

[node name="EnterArea2" type="Area2D" parent="." index="4"]
editor/display_folded = true
position = Vector2( 16, 0 )

[node name="Collision" type="CollisionShape2D" parent="EnterArea2" index="0"]
shape = SubResource( 4 )

[node name="PilotPos" type="Position2D" parent="." index="5"]
position = Vector2( -15.8895, -0.115982 )

[node name="CoPilotPos" type="Position2D" parent="." index="6"]
position = Vector2( 16.0055, 0.115982 )

